center previous searches, begin modal for multiple cities

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <br><br><br>
 
     <div class="history">
-      <div id="pastSearches"><strong>Previously searched cities:</strong>
+      <div id="pastSearches"><strong>Previously searched cities:</strong></div>
           <hr>
             <ul id="pastCityList"></ul>
       </div>
     </div>
-    </div>
+    
     <!--JQuery Script-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--JS Script-->
