finish styling, reformat date to show day

--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     
 
     <br><br><br>
-
+    <div class="container">
     <div class="history">
-      <div id="pastSearches"><strong>Previously searched cities:</strong></div>
+      <div id="pastSearches">
+        <div class = "strong"><strong>Previously searched cities:</strong></div>
+      </div>
           <hr>
             <ul id="pastCityList"></ul>
       </div>
+    </div>
     </div>
     
     <!--JQuery Script-->
